Add basic structure for solution, DTO for add task, start with ASP.NET Core Identity

--- a/ToDoListAPI.Core/ToDoListAPI.Core.csproj
+++ b/ToDoListAPI.Core/ToDoListAPI.Core.csproj
@@ -7,11 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Domain\Entities\" />
     <Folder Include="Domain\RepositoryContracts\" />
-    <Folder Include="DTO\" />
     <Folder Include="ServicesContracts\" />
     <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.9" />
   </ItemGroup>
 
 </Project>
