--- a/ToDoListAPI.Infastructure/ToDoListAPI.Infastructure.csproj
+++ b/ToDoListAPI.Infastructure/ToDoListAPI.Infastructure.csproj
@@ -8,6 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ToDoListAPI.Core\ToDoListAPI.Core.csproj" />
   </ItemGroup>
 
 </Project>
