--- a/ToDoListAPI.Web/ToDoListAPI.Web.csproj
+++ b/ToDoListAPI.Web/ToDoListAPI.Web.csproj
@@ -8,6 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ToDoListAPI.Core\ToDoListAPI.Core.csproj" />
+    <ProjectReference Include="..\ToDoListAPI.Infastructure\ToDoListAPI.Infastructure.csproj" />
   </ItemGroup>
 
 </Project>
